--- a/package.json
+++ b/package.json
@@ -6,20 +6,24 @@
     "dev": "next dev --turbopack",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "clean": "rimraf .next"
   },
   "dependencies": {
     "@google/generative-ai": "^0.21.0",
     "@hookform/resolvers": "^3.10.0",
     "axios": "^1.7.9",
+    "dotenv": "^16.4.7",
     "moment": "^2.30.1",
     "mysql2": "^3.12.0",
     "next": "15.1.4",
+    "pg-hstore": "^2.3.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.54.2",
     "react-icons": "^5.4.0",
     "sequelize": "^6.37.5",
+    "sequelize-typescript": "^2.1.6",
     "yup": "^1.6.1"
   },
   "devDependencies": {
@@ -30,6 +34,7 @@
     "eslint": "^9",
     "eslint-config-next": "15.1.4",
     "postcss": "^8",
+    "rimraf": "^6.0.1",
     "sequelize-cli": "^6.6.2",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
