--- a/package.json
+++ b/package.json
@@ -11,20 +11,31 @@
   },
   "dependencies": {
     "@google/generative-ai": "^0.21.0",
+    "@headlessui/react": "^2.2.0",
     "@hookform/resolvers": "^3.10.0",
+    "@tailwindcss/forms": "^0.5.10",
+    "@tailwindcss/typography": "^0.5.16",
     "axios": "^1.7.9",
+    "bcrypt": "^5.1.1",
+    "date-fns": "^4.1.0",
     "dotenv": "^16.4.7",
+    "jsonwebtoken": "^9.0.2",
     "moment": "^2.30.1",
     "mysql2": "^3.12.0",
     "next": "15.1.4",
     "pg-hstore": "^2.3.4",
+    "primeflex": "^3.3.1",
+    "primeicons": "^7.0.0",
+    "primereact": "^10.9.1",
     "react": "^19.0.0",
+    "react-dnd": "^16.0.1",
+    "react-dnd-html5-backend": "^16.0.1",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.54.2",
     "react-icons": "^5.4.0",
     "sequelize": "^6.37.5",
     "sequelize-typescript": "^2.1.6",
-    "yup": "^1.6.1"
+    "zod": "^3.24.1"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
@@ -37,6 +48,7 @@
     "rimraf": "^6.0.1",
     "sequelize-cli": "^6.6.2",
     "tailwindcss": "^3.4.1",
+    "ts-node": "^10.9.2",
     "typescript": "^5"
   }
 }
