--- a/tsconfig.json
+++ b/tsconfig.json
@@ -31,6 +31,6 @@
     "experimentalDecorators": true,
     "emitDecoratorMetadata": true
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
-  "exclude": ["node_modules"]
+  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts", "src/migrations/add-isdone-priority-to-tasks.js"],
+  "exclude": ["node_modules", "migrations"]
 }
