--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "axios": "^1.7.9",
     "bcrypt": "^5.1.1",
     "date-fns": "^4.1.0",
+    "dayjs": "^1.11.13",
     "dotenv": "^16.4.7",
     "jsonwebtoken": "^9.0.2",
     "moment": "^2.30.1",
