--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "moment": "^2.30.1",
     "mysql2": "^3.12.0",
     "next": "15.1.4",
+    "nodemailer": "^6.9.16",
     "pg-hstore": "^2.3.4",
     "primeflex": "^3.3.1",
     "primeicons": "^7.0.0",
