--- a/.sequelizerc
+++ b/.sequelizerc
@@ -4,6 +4,6 @@ const path = require('path');
 module.exports = {
   'config': path.resolve('src/config/sequelize-config.ts'),
   'models-path': path.resolve('src/models'),
-  'seeders-path': path.resolve('src/seeders'),
-  'migrations-path': path.resolve('src/migrations')
+  'seeders-path': path.resolve('/seeders'),
+  'migrations-path': path.resolve('/migrations')
 };
