--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "next dev --turbopack",
-    "build": "next build && rm -rf src/migrations src/seeders",
+    "build": "next build",
     "start": "next start",
     "lint": "next lint",
     "clean": "rimraf .next",
