--- a/.sequelizerc
+++ b/.sequelizerc
@@ -1,9 +1,8 @@
-// filepath: /d:/Repositories/task-manager/.sequelizerc
 const path = require('path');
 
 module.exports = {
-  'config': path.resolve('src/config/sequelize-config.ts'),
-  'models-path': path.resolve('src/models'),
-  'seeders-path': path.resolve('/seeders'),
-  'migrations-path': path.resolve('/migrations')
+  'config': path.resolve(__dirname, 'sequelize-config.js'),
+  'models-path': path.resolve(__dirname, 'src/models'),
+  'seeders-path': path.resolve(__dirname, 'seeders'),
+  'migrations-path': path.resolve(__dirname, 'migrations')
 };
