--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "postinstall": "npm install pg"
   },
   "dependencies": {
+    "@google/generative-ai": "^0.21.0",
     "@headlessui/react": "^2.2.0",
     "@hookform/resolvers": "^3.10.0",
     "@tailwindcss/forms": "^0.5.10",
