--- a/package.json
+++ b/package.json
@@ -25,9 +25,9 @@
     "jsonwebtoken": "^9.0.2",
     "moment": "^2.30.1",
     "mysql2": "^3.12.0",
-    "next": "15.1.4",
+    "next": "^15.3.0",
     "nodemailer": "^6.9.16",
-    "pg": "^8.13.1",
+    "pg": "^8.14.1",
     "pg-hstore": "^2.3.4",
     "primeflex": "^3.3.1",
     "primeicons": "^7.0.0",
@@ -40,6 +40,7 @@
     "react-icons": "^5.4.0",
     "sequelize": "^6.37.5",
     "sequelize-typescript": "^2.1.6",
+    "sqlite3": "^5.1.7",
     "zod": "^3.24.1"
   },
   "devDependencies": {
