feat: update sequelize configuration to use data directory for SQLite storage

--- a/sequelize-config.json
+++ b/sequelize-config.json
@@ -1,7 +1,7 @@
 {
   "development": {
     "dialect": "sqlite",
-    "storage": "./database.sqlite",
+    "storage": "./data/database.sqlite",
     "logging": false
   },
   "test": {
